--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-  "name": "example-vue-data-binder",
+  "name": "example-vue-component-data-helper-mixin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "serve": "vite",
+    "build": "vue-tsc --noEmit -p tsconfig.json && vite build",
+    "lint": "eslint \"./{src}/**/*.{ts,tsx,vue}\" && prettier --check \"./{src}/**/*.{ts,tsx,vue}\""
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
+    "@mdi/font": "^7.0.96",
+    "vue": "^2.7.10",
+    "vue-component-data-helper-mixin": "^0.1.0",
+    "vue-persistedstate": "^1.2.5",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^1.1.3",
-    "@vue/vue2-jest": "^27.0.0-alpha.2",
-    "babel-jest": "^27.0.6",
-    "cypress": "^9.7.0",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-vue2": "^1.1.2",
+    "@vue/eslint-config-typescript": "^11.0.1",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.0.5",
+    "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.4.1",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "~1.32.13",
+    "sass-loader": "^13.0.2",
+    "typescript": "~4.8.3",
+    "unplugin-vue-components": "^0.22.6",
+    "vite": "^3.1.0",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vue-template-compiler": "^2.7.10",
+    "vue-tsc": "^0.40.13"
   }
 }
